# yfoa

./: Bugs.md  NOTES.md  README.md  note.md  state.puml
gridmap/: CMakeLists.txt
ultis/: plottraj.py
yf_manager/: CMakeLists.txt  package.xml  yf_mission.txt
yf_manager/config/: gz.yaml  seu.yaml  yf.yaml
yf_manager/include/: MissionXYZ.h  PlanFSM.h  Planner.h
yf_manager/launch/: gzonboard.launch  px4_mavros.launch  rs_depth.launch  seuonboard.launch  yf.rviz  yfonboard.launch  yfremotevis.launch
yf_manager/msg/: WayPoints.msg
yf_manager/src/: MissionXYZ.cpp  PlanFSM.cpp  PlanFSM_node.cpp  Planner.cpp  Planner_node.cpp
yf_manager2/: CMakeLists.txt  package.xml
yf_manager2/config/: yf.yaml
yf_manager2/include/: MissionXYZ.h  PlanFSM.h
yf_manager2/launch/: px4_mavros.launch  rs_depth.launch  yf.rviz  yfonboard.launch  yfremotevis.launch
yf_manager2/msg/: Spline.msg  Splines.msg
yf_manager2/src/: MissionXYZ.cpp  PlanFSM.cpp  PlanFSM_node.cpp
yf_planner/: CMakeLists.txt  package.xml
yf_planner/include/: Astar.h  HybirdAstar.h  PathNlopt.h  QuinticSpline.h  UniformBspline.h
yf_planner/src/: Astar.cpp  HybirdAstar.cpp  PathNlopt.cpp  QuinticSpline.cpp  UniformBspline.cpp
